Moved Slideshow to Hobbies
CSS changes.

Moved slideshow to hobbies. Work in progress.

--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -19,3 +19,60 @@
         <input type="text" placeholder="Search">
     </div>
 </nav>
+
+<section class="slideshow-container">
+    <div class="slides fade">
+        <img src="../images/DSCF0570.JPG" alt="Photo 1">
+    </div>
+    <div class="slides fade">
+        <img src="../images/image%202.jpg" alt="Photo 2">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_1229.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/CFTF6855.JPG" alt="Photo 4">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_1879.JPG" alt="Photo 5">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_1971.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_1983.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_1998.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_2003.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_2021.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_2134.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_2187.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_2332.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_2335.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_2403.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_2441.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_5009.JPG" alt="Photo 3">
+    </div>
+    <div class="slides fade">
+        <img src="../images/IMG_6954.JPG" alt="Photo 3">
+    </div>
+</section>
