--- a/pages/index.html
+++ b/pages/index.html
@@ -26,71 +26,13 @@
 <section class="hero">
     <h1>Sean Huynh Portfolio</h1>
     <h2> Bachelor of Engineering (Honours) </h2>
+    <h3> Majoring in Software Engineering </h3>
     <h2> University of Technology Sydney</h2>
     <h3> WAM: 86.29 | GPA: 6.61/7 </h3>
     <div class="profile-photo">
         <img src="../images/DSCF1327.JPG" alt="Profile Photo of Me">
     </div>
 </section>
-
-
-<section class="slideshow-container">
-    <div class="slides fade">
-        <img src="../images/DSCF0570.JPG" alt="Photo 1">
-    </div>
-    <div class="slides fade">
-        <img src="../images/image%202.jpg" alt="Photo 2">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_1229.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/CFTF6855.JPG" alt="Photo 4">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_1879.JPG" alt="Photo 5">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_1971.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_1983.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_1998.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_2003.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_2021.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_2134.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_2187.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_2332.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_2335.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_2403.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_2441.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_5009.JPG" alt="Photo 3">
-    </div>
-    <div class="slides fade">
-        <img src="../images/IMG_6954.JPG" alt="Photo 3">
-    </div>
-</section>
-
 
 <section class="summary">
     <h2>About Me</h2>
