Changed formatting to columns
Career History and Key Achievements now on same rows and column as middle information.

Changed CSS to format job history and job details.

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,16 +23,62 @@
 </nav>
 
 
-<section class="hero">
-    <h1>Sean Huynh Portfolio</h1>
-    <h2> Bachelor of Engineering (Honours) </h2>
-    <h3> Majoring in Software Engineering </h3>
-    <h2> University of Technology Sydney</h2>
-    <h3> WAM: 86.29 | GPA: 6.61/7 </h3>
-    <div class="profile-photo">
-        <img src="../images/DSCF1327.JPG" alt="Profile Photo of Me">
+<div class="row">
+    <div class="column">
+    <h1>Career History</h1>
+    <ul>
+        <li>
+            <b>Interim Planner/Support | Toll Group (August 25 - Present)</b>
+            <p>Responsible for daily operations planning and coordination.</p>
+            <p>Use of Excel and SQL to query and analyse data and identify trends to help resource allocation.</p>
+        </li>
+    </ul>
+
+    <ul>
+        <li>
+            <b>Intern Developer | Optik Consultancy (May 25 - August 25)</b>
+            <p>Development of a mobile application utilizing .NET MAUI and Blazor.</p>
+            <p>UI design and prototype designing for clients, using Figma.</p>
+            <p>API testing and creation with Postman and Rider IDE.</p>
+            <p>Geospatial functionality with PostGIS to enable database calculations for coordinates and mapping.</p>
+        </li>
+    </ul>
+
+        <ul>
+            <li>
+                <b>Planner | Toll Group (August 23 - July 25) </b>
+                <p>Analysis of data and trends using Excel and SQL and resource allocation</p>
+                <p>Stakeholder management and planning in line with budget and goals</p>
+            </li>
+
+        </ul>
     </div>
-</section>
+
+
+    <div class="column">
+        <section class="hero">
+            <h1>Sean Huynh Portfolio</h1>
+            <h2>Bachelor of Engineering (Honours)</h2>
+            <h3>Majoring in Software Engineering</h3>
+            <h2>University of Technology Sydney</h2>
+            <h3>WAM: 86.29 | GPA: 6.61/7</h3>
+            <div class="profile-photo">
+                <img src="../images/DSCF1327.JPG" alt="Profile Photo of Me">
+            </div>
+        </section>
+    </div>
+
+    <div class="column">
+        <h1>Key Achievements</h1>
+        <ul>
+            <li>Developed pantry management app in Svelte + Node.js.</li>
+            <li>Implemented AI-powered ingredient autocomplete feature.</li>
+            <li>Built responsive portfolio site using HTML, CSS, and JS.</li>
+        </ul>
+    </div>
+
+</div>
+
 
 <section class="summary">
     <h2>About Me</h2>
