Alignments and Dividers
Added Alignments and Dividers for Hobbies section

--- a/pages/index.html
+++ b/pages/index.html
@@ -124,7 +124,6 @@
 </div>
 
 <section id="hobbies" class = "hero hobbies-hero">
-    <h1 class="hobbies-title"> Hobbies </h1>
     <div class="row">
         <div class="column">
             <h3> Photography </h3>
@@ -210,7 +209,8 @@
             <div class="slideshow-caption photography-caption"></div>
         </div>
         <div class="column">
-            <h3> Gaming </h3>
+            <h1 class="hobbies-title"> Hobbies </h1>
+            <h3 class="Gaming-title"> Gaming </h3>
             <p> I enjoy RPGs, tactical and strategy games, as well as adventure style games. I've recently completed Baldurs Gate 3 for the first time and I am in
             the process of playing Dragon Age: The Veilguard, when I have free time. Otherwise I enjoy returning to RPGs and Strategy games such as Crusader Kings 3 and the
             Total War series.</p>
