--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sean Huynh Portfolio</title>
-    <link rel="stylesheet" href="../styles/style.css" />
-    <script src="../scripts/main.js" defer></script>
+    <link rel="stylesheet" href="styles/style.css" />
+    <script src="scripts/main.js" defer></script>
 </head>
 <body>
 
@@ -67,7 +67,7 @@
             <h2>University of Technology Sydney</h2>
             <h3>WAM: 86.29 | GPA: 6.61/7</h3>
             <div class="profile-photo">
-                <img src="../images/DSCF1327.JPG" alt="Profile Photo of Me">
+                <img src="images/DSCF1327.JPG" alt="Profile Photo of Me">
             </div>
             <h2>About Me</h2>
             <p>
@@ -131,79 +131,79 @@
             during the last few trips I have taken.</p>
             <div class="slideshow-container photography-slideshow">
                 <div class="slides photo-slide fade" data-caption="Sky Tower - Auckland, New Zealand">
-                    <img src="../images/DSCF0570.JPG" alt="Photo 1">
+                    <img src="images/DSCF0570.JPG" alt="Photo 1">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Two Dogs Playing - Grindelwald, Switzerland">
-                    <img src="../images/image%202.jpg" alt="Photo 2">
+                    <img src="images/image%202.jpg" alt="Photo 2">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Marina Bay Sands - Singapore">
-                    <img src="../images/IMG_1229.JPG" alt="Photo 3">
+                    <img src="images/IMG_1229.JPG" alt="Photo 3">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Helicopter Ride over New York - New York City, USA">
-                    <img src="../images/CFTF6855.JPG" alt="Photo 4">
+                    <img src="images/CFTF6855.JPG" alt="Photo 4">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Macchu Pichu - Cusco, Peru">
-                    <img src="../images/IMG_1879.JPG" alt="Photo 5">
+                    <img src="images/IMG_1879.JPG" alt="Photo 5">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Sunset - Somewhere in Bolivia">
-                    <img src="../images/IMG_1971.JPG" alt="Photo 7">
+                    <img src="images/IMG_1971.JPG" alt="Photo 7">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Markets and Streets - La Paz, Bolivia">
-                    <img src="../images/IMG_1983.JPG" alt="Photo 8">
+                    <img src="images/IMG_1983.JPG" alt="Photo 8">
                 </div>
                 <div class="slides photo-slide fade" data-caption="On a Highway to Death Road - Yungas, Bolivia">
-                    <img src="../images/IMG_1998.JPG" alt="Photo 9">
+                    <img src="images/IMG_1998.JPG" alt="Photo 9">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Pitstop on the Death Road - Yungas, Bolivia">
-                    <img src="../images/IMG_2003.JPG" alt="Photo 10">
+                    <img src="images/IMG_2003.JPG" alt="Photo 10">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Halfway point on the Death Road - Yungas, Bolivia">
-                    <img src="../images/IMG_2021.JPG" alt="Photo 11">
+                    <img src="images/IMG_2021.JPG" alt="Photo 11">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Salt Flats - Uyuni, Bolivia">
-                    <img src="../images/IMG_2134.JPG" alt="Photo 12">
+                    <img src="images/IMG_2134.JPG" alt="Photo 12">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Flamingos - Uyuni, Bolivia">
-                    <img src="../images/IMG_2187.JPG" alt="Photo 13">
+                    <img src="images/IMG_2187.JPG" alt="Photo 13">
                 </div>
                 <div class="slides photo-slide fade" data-caption="San Cristobal Hill - Santiago, Chile">
-                    <img src="../images/IMG_2332.JPG" alt="Photo 14">
+                    <img src="images/IMG_2332.JPG" alt="Photo 14">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Sky Costanera - Santiago, Chile">
-                    <img src="../images/IMG_2335.JPG" alt="Photo 15">
+                    <img src="images/IMG_2335.JPG" alt="Photo 15">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Santa Lucia Hill - Santiago, Chile">
-                    <img src="../images/IMG_2403.JPG" alt="Photo 16">
+                    <img src="images/IMG_2403.JPG" alt="Photo 16">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Flight Home from Chile - Somewhere, Chile">
-                    <img src="../images/IMG_2441.JPG" alt="Photo 17">
+                    <img src="images/IMG_2441.JPG" alt="Photo 17">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Osaka Castle - Osaka, Japan">
-                    <img src="../images/IMG_5009.JPG" alt="Photo 18">
+                    <img src="images/IMG_5009.JPG" alt="Photo 18">
                 </div>
                 <div class="slides photo-slide fade" data-caption="View from the Peak - Hong Kong, China">
-                    <img src="../images/IMG_6954.JPG" alt="Photo 19">
+                    <img src="images/IMG_6954.JPG" alt="Photo 19">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Badaling Great Wall - Beijing, China">
-                    <img src="../images/IMG_8046.JPG" alt="Photo 20">
+                    <img src="images/IMG_8046.JPG" alt="Photo 20">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Nyhavn Harbour - Copenhagen, Denmark">
-                    <img src="../images/IMG_6974.jpg" alt="Photo 21">
+                    <img src="images/IMG_6974.jpg" alt="Photo 21">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Afternoon Walk - Stockholm, Sweden">
-                    <img src="../images/IMG_6999.jpg" alt="Photo 22">
+                    <img src="images/IMG_6999.jpg" alt="Photo 22">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Nidaros Cathedral - Trondheim, Norway">
-                    <img src="../images/IMG_8215.jpg" alt="Photo 23">
+                    <img src="images/IMG_8215.jpg" alt="Photo 23">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Badaling Great Wall - Beijing, China">
-                    <img src="../images/IMG_8046.JPG" alt="Photo 24">
+                    <img src="images/IMG_8046.JPG" alt="Photo 24">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Northern Lights - Tromso, Norway">
-                    <img src="../images/IMG_8571.jpg" alt="Photo 25">
+                    <img src="images/IMG_8571.jpg" alt="Photo 25">
                 </div>
                 <div class="slides photo-slide fade" data-caption="Bryggen - Bergen, Norway">
-                    <img src="../images/IMG_7971.jpg" alt="Photo 26">
+                    <img src="images/IMG_7971.jpg" alt="Photo 26">
                 </div>
             </div>
             <div class="slideshow-caption photography-caption"></div>
@@ -216,28 +216,28 @@
             Total War series.</p>
             <div class="slideshow-container gaming-slideshow">
                 <div class="slides game-slide fade" data-caption="Baldurs Gate 3">
-                    <img src="../images/BaldursGate.jpg" alt="BaldursGate">
+                    <img src="images/BaldursGate.jpg" alt="BaldursGate">
                 </div>
                 <div class="slides game-slide fade" data-caption="Crusader Kings 3">
-                    <img src="../images/CrusaderKings.jpg" alt="CrusaderKings">
+                    <img src="images/CrusaderKings.jpg" alt="CrusaderKings">
                 </div>
                 <div class="slides game-slide fade" data-caption="Cyberpunk 2077">
-                    <img src="../images/Cyberpunk2077.jpg" alt="Cyberpunk">
+                    <img src="images/Cyberpunk2077.jpg" alt="Cyberpunk">
                 </div>
                 <div class="slides game-slide fade" data-caption="Dragon Age Origins">
-                    <img src="../images/DragonAge.jpg" alt="DragonAge">
+                    <img src="images/DragonAge.jpg" alt="DragonAge">
                 </div>
                 <div class="slides game-slide fade" data-caption="Mass Effect">
-                    <img src="../images/MassEffect.jpg" alt="MassEffect">
+                    <img src="images/MassEffect.jpg" alt="MassEffect">
                 </div>
                 <div class="slides game-slide fade" data-caption="Red Dead Redemption 2">
-                    <img src="../images/RDR2.jpg" alt="RDR">
+                    <img src="images/RDR2.jpg" alt="RDR">
                 </div>
                 <div class="slides game-slide fade" data-caption="Rome Total War 2">
-                    <img src="../images/RomeTotalWar.jpg" alt="RTW">
+                    <img src="images/RomeTotalWar.jpg" alt="RTW">
                 </div>
                 <div class="slides game-slide fade" data-caption="Warcraft 3: The Frozen Throne">
-                    <img src="../images/Warcraft.jpg" alt="WC">
+                    <img src="images/Warcraft.jpg" alt="WC">
                 </div>
             </div>
             <div class="slideshow-caption gaming-caption"></div>
@@ -249,25 +249,25 @@
             My personal favourite is the Notre Dame Cathedral and the Trevi Fountain.</p>
             <div class="slideshow-container lego-slideshow">
                 <div class="slides lego fade" data-caption="Trevi Fountain - 21062">
-                    <img src="../images/trevilego.jpg" alt="trevi">
+                    <img src="images/trevilego.jpg" alt="trevi">
                 </div>
                 <div class="slides lego fade" data-caption="Singapore - 21057">
-                    <img src="../images/singaporelego.jpg" alt="singapore">
+                    <img src="images/singaporelego.jpg" alt="singapore">
                 </div>
                 <div class="slides lego fade" data-caption="Statue of Liberty - 21042">
-                    <img src="../images/libertylego.jpg" alt="liberty">
+                    <img src="images/libertylego.jpg" alt="liberty">
                 </div>
                 <div class="slides lego fade" data-caption="Neuschwanstein Castle - 21063">
-                    <img src="../images/neuschwansteinlego.jpg" alt="neusch">
+                    <img src="images/neuschwansteinlego.jpg" alt="neusch">
                 </div>
                 <div class="slides lego fade" data-caption="Notre Dame Cathedral - 21061">
-                    <img src="../images/notredamelego.jpg" alt="notre">
+                    <img src="images/notredamelego.jpg" alt="notre">
                 </div>
                 <div class="slides lego fade" data-caption="Himeji Castle - 21060">
-                    <img src="../images/himejilego.jpg" alt="himeji">
+                    <img src="images/himejilego.jpg" alt="himeji">
                 </div>
                 <div class="slides lego fade" data-caption="Great Pyramid of Giza - 21058">
-                    <img src="../images/gizalego.jpg" alt="giza">
+                    <img src="images/gizalego.jpg" alt="giza">
                 </div>
             </div>
             <div class="slideshow-caption lego-caption"></div>
