--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar">
     <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="../index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
         <li><a href="#" id="contact-link"> Contact Me </a></li>
